Bug 167011 - Webcam causes dramatically slows down the configuration dialogue
Summary: Webcam causes dramatically slows down the configuration dialogue
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Audio/Video Plugin (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 173296 182445 183222 187690 204784 253183 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-19 18:29 UTC by Simon Krämer
Modified: 2010-10-12 13:15 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Krämer 2008-07-19 18:29:54 UTC
Version:            (using KDE 4.0.98)
Installed from:    Debian testing/unstable Packages
OS:                Linux

I had to unload the module for my webcam (gspca) to get decent performance (as in other kde4 applications) in the configuration dialogue. Even letting the mouse hover over the categories on the left was awefully slow.
Comment 1 Drew Fisher 2008-07-19 20:07:13 UTC
I have a uvcvideo cam, and I note that kopete starts capturing frames from the camera as soon as I open the main configuration dialog - even if it's not open to the webcam frame.  The video capture and postprocessing (scaling contrast, converting YUV -> RGB, etc) are rather CPU-intensive, so ideally the webcam won't start capturing until the webcam frame of the configuration dialog is activated.

Confirmed in SVN 832895.
Comment 2 Frank Schaefer 2010-03-09 17:49:44 UTC
*** Bug 173296 has been marked as a duplicate of this bug. ***
Comment 3 Frank Schaefer 2010-03-09 17:51:06 UTC
*** Bug 183222 has been marked as a duplicate of this bug. ***
Comment 4 Frank Schaefer 2010-03-09 17:52:16 UTC
*** Bug 187690 has been marked as a duplicate of this bug. ***
Comment 5 Frank Schaefer 2010-03-09 17:54:25 UTC
*** Bug 204784 has been marked as a duplicate of this bug. ***
Comment 6 Frank Schaefer 2010-03-09 18:16:36 UTC
The problem is that
- I can't see any obvious bugs in the code
- I can't reproduce it with my devices (and some of them are really slow)
- it seems to depend on the driver, too (old GSPCAV only ?)

If anyone who is able to reproduce the problem could compile Kopete by himself, I would prepare some patches for further investigation...
Volunteers ? ;)
Comment 7 Frank Schaefer 2010-05-13 17:06:42 UTC
I can now reproduce the problem with a JPEG-device (Microsoft LifeCam VX-3000 045e:00f5, gspca-sonixj):
ioctl VIDIOC_DQBUF sporadically blocks for exactly 3 seconds an then returns with error EIO, which inidicates a driver internal error.
I noticed that this happens more often to permanently, if the picture doesn't change (for example: capturing the wall with constant light conditions).
I guess the device stops sending data in this case, which I believe is the 
expected behavior (its JPEG !).
But I'm pretty sure the driver should not block and return the last or an empty frame instead of an "internal error".
Will talk to the kernel deves...
Comment 8 Frank Schaefer 2010-06-18 17:24:01 UTC
*** Bug 182445 has been marked as a duplicate of this bug. ***
Comment 9 Frank Schaefer 2010-06-18 20:02:40 UTC
SVN commit 1139611 by fschaefer:

Fix freezing of the video configuration dialog by switching to non-blocking device access

BUG: 167011
BUG: 241507
CCBUG: 236240


 M  +3 -1      kopete/config/avdevice/avdeviceconfig.cpp  
 M  +13 -21    libkopete/avdevice/videodevice.cpp  
 M  +2 -14     libkopete/avdevice/videodevicepool.cpp  
 M  +2 -1      libkopete/ui/avatarwebcamdialog.cpp  
 M  +10 -6     protocols/qq/ui/qqwebcamdialog.cpp  
 M  +8 -5      protocols/testbed/ui/testbedwebcamdialog.cpp  
 M  +8 -4      protocols/yahoo/yahoowebcam.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1139611
Comment 10 Frank Schaefer 2010-10-12 13:15:02 UTC
*** Bug 253183 has been marked as a duplicate of this bug. ***