Fix freezing of the video configuration dialog by switching to non-blocking device access

BUG: 167011
BUG: 241507
CCBUG: 236240

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1139611